--- a/www/index.html
+++ b/www/index.html
@@ -52,8 +52,8 @@
 		<div data-role="header" data-position="fixed">
 			<div data-role="navbar">
 				<ul id="counter_list" class="daily_counter">
-				  <li id="to_do_count" ><a href="#to_do"> To do:&nbsp <span> &nbsp 0 &nbsp </span></a></li>
-				  <li id="snack_count" ><a href="#" onclick='alert("snack!");'> Snack:&nbsp <span> &nbsp 0 &nbsp </span></a></li>
+				  <li id="to_do_count" ><a href="#to_do"> To do:&nbsp <span></span></a></li>
+				  <li id="snack_count" ><a href="#" onclick='alert("snack!");'> Snack:&nbsp <span></span></a></li>
 				</ul>
 			</div>
 		</div>
