--- a/www/index.html
+++ b/www/index.html
@@ -62,15 +62,15 @@
 		
 			<div id="naslov">
 				<div id="place_holder">
-					<div class="risk undefined undefined_border">
-						<img src="img/undefined.png" height="80px" class="float_l">
-						<p>Caries risk level: UNDEFINED</p>
-					</div>
+					<img src="img/undefined1.png" />
 				</div>
 				
 				<p class="clear"></p>
+				<ul  data-role="listview">
+					  <li id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </li>
 
-				<p id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </p>
+				</ul>
+			<!--	<p id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </p> -->
 			</div>
 
 		
