--- a/www/index.html
+++ b/www/index.html
@@ -47,9 +47,9 @@
 <!-- =============================== H O M E ======================================= -->
 
 
-	<section id="home" data-role="page" data-theme="c">
+	<section id="home" data-role="page" data-theme="a">
 	
-		<div data-role="header" data-position="fixed">
+		<div data-role="header" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul id="counter_list" class="daily_counter">
 				  <li id="to_do_count" ><a href="#to_do"> To do:&nbsp <span></span></a></li>
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 	
-		<div data-role="content" id="content" data-theme="e">
+		<div data-role="content" id="content" data-theme="a">
 		
 			<div id="naslov">
 				<div id="place_holder">
@@ -67,7 +67,7 @@
 				
 				<p class="clear"></p>
 				<ul  data-role="listview">
-					  <li id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </li>
+					  <li id="time"  data-theme="c" class="emphasize">Next dental visit: <span>12.12.2014</span> </li>
 
 				</ul>
 			<!--	<p id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </p> -->
@@ -87,7 +87,7 @@
 		
 		
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home" class="ui-btn-active ui-state-persist">Home</a></li>
