--- a/www/index.html
+++ b/www/index.html
@@ -62,12 +62,12 @@
 		
 			<div id="naslov">
 				<div id="place_holder">
-					<img src="img/undefined1.png" />
+					<img src="img/high2.png" />
 				</div>
 				
 				<p class="clear"></p>
 				<ul  data-role="listview">
-					  <li id="time"  data-theme="c" class="emphasize">Next dental visit: <span>12.12.2014</span> </li>
+					  <li id="time"  data-theme="a" class="emphasize">Next dental visit: <span>12.12.2014</span> </li>
 
 				</ul>
 			<!--	<p id="time" class="emphasize">Next dental visit: <span>12.12.2014</span> </p> -->
