status objects and risk level

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 			<script type="text/javascript" src="phonegap.js"></script>
 			<script type="text/javascript" src="js/jstorage.js"></script>
 			<script type="text/javascript" src="js/date.js"></script>
+			<script type="text/javascript" src="js/submitForm.js"></script>
 			<script type="text/javascript" src="js/test_objects.js"></script>
 			<script type="text/javascript" src="js/controller.js"></script>
 			<script type"text/javascript">
@@ -31,7 +32,7 @@
 	<!--			
 			<script type="text/javascript" src="js/events.js"></script>	
 			<script type="text/javascript" src="js/calculate.js"></script>
-			<script type="text/javascript" src="js/submitForm.js"></script>
+
 			<script type="text/javascript" src="js/registration.js"></script>	
 
 		
@@ -64,6 +65,7 @@
 				<div id="place_holder">
 					<img src="img/high2.png" />
 				</div>
+
 				
 				<p class="clear"></p>
 				<ul  data-role="listview">
@@ -221,9 +223,9 @@
 <!-- =============================== 	DENTAL VISIT   ======================================= -->
 
 	
-	<section id="dental_visit" data-role="page" data-theme="b">
+	<section id="dental_visit" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Dental visit</h4>
 			<a href="#profile" data-icon="back">Back</a>
 		</div>
@@ -244,7 +246,7 @@
 		
 		</div>
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home" >Home</a></li>
@@ -426,9 +428,9 @@
 	<!-- =============================== 	GENERAL DATA   ======================================= -->
 
 	
-	<section id="general_data" data-role="page" data-theme="b">
+	<section id="general_data" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>General data</h4>
 			<a href="#dental_visit" data-icon="back">Back</a>
 		</div>
@@ -481,7 +483,7 @@
 		
 		</div>
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home" >Home</a></li>
@@ -499,9 +501,9 @@
 	<!-- =============================== 	CURRENT STATUS   ======================================= -->
 
 	
-	<section id="current_status" data-role="page" data-theme="b">
+	<section id="current_status" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Current status</h4>
 			<a href="#dental_visit" data-icon="back">Back</a>
 		</div>
@@ -519,7 +521,7 @@
 		
 
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home">Home</a></li>
@@ -536,8 +538,8 @@
 		<!-- =============================== 	Disease indicators   ======================================= -->
 
 	
-	<section id="disease_indicators" data-role="page" data-theme="b">
-		<div data-role="header"  data-position="fixed">
+	<section id="disease_indicators" data-role="page" data-theme="a">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Disease indicators</h4>
 			<a href="#current_status" data-icon="back">Back</a>
 		</div>
@@ -573,7 +575,7 @@
 		
 
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home" data-icon="home" >Home</a></li>
@@ -592,8 +594,8 @@
 		<!-- =============================== 	Risk factors   ======================================= -->
 
 	
-	<section id="risk_factors" data-role="page" data-theme="b">
-		<div data-role="header"  data-position="fixed">
+	<section id="risk_factors" data-role="page" data-theme="a">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Risk factors</h4>
 			<a href="#current_status" data-icon="back">Back</a>
 		</div>
@@ -639,7 +641,7 @@
 		
 
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home" >Home</a></li>
@@ -656,9 +658,9 @@
 		<!-- =============================== 	Protective factors   ======================================= -->
 
 	
-	<section id="protective_factors" data-role="page" data-theme="b">
+	<section id="protective_factors" data-role="page" data-theme="a">
 	
-		<div data-role="header" data-position="fixed">
+		<div data-role="header" data-position="fixed" data-theme="b">
 			<h4>Protective factors</h4>
 			<a href="#current_status" data-icon="back">Back</a>
 		</div>
@@ -707,7 +709,7 @@
 		
 
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
               	<div data-role="navbar">
 					<ul>
 					  <li><a href="#home"  data-icon="home" >Home</a></li>
@@ -1182,13 +1184,11 @@
 	</section>			
 
 	
-<!-- <script type="text/javascript" src="js/getstorage.js"></script> -->
-<script type"text/javascript">
 
-for (i = new Date().getFullYear(); i > 1900; i--)
-{
-    $('#yearpicker').append($('<option />').val(i).html(i));
-}
+<script type"text/javascript">
+	for (i = new Date().getFullYear(); i > 1900; i--){
+		$('#yearpicker').append($('<option />').val(i).html(i));
+	}
 </script>
 
   </body>
