risk level message

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
 		
 			<div id="naslov">
 				<div id="place_holder">
-					<img src="img/high2.png" />
+					<img src="img/undefined.png" />
 				</div>
 
 				
