specific th submit/view

--- a/www/index.html
+++ b/www/index.html
@@ -195,7 +195,7 @@
 				<a href="#"  data-role="button" id="timer-button"  onclick="timer(120);">Start</a>	
 				<p id="timer">02:00</p>
 				<br />
-				<p>Press start button when ready to begin teeth brushing. The brushing should last 2 minutes, as timer indicates.</p>
+				<p>Press start button when ready to begin teeth brushing. The brushing should last at least 2 minutes, as timer indicates.</p>
 				<p id="tooth_paste">Use standard over-the-counter tooth paste (1100 - 1450 ppm F).</p>
 				<p >Refer to info section/resources to learn more about teeth brushing.</p>
 
@@ -837,9 +837,9 @@
 		<!-- =============================== 	Antibacterials   ======================================= -->
 
 	
-	<section id="antibacterials" data-role="page" data-theme="b">
+	<section id="antibacterials" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Antibacterial therapy</h4>
 			<a href="#recommendations" data-icon="back">Back</a>
 		</div>
@@ -870,7 +870,7 @@
 		</div>
 		
 		
-			<div data-role="footer" data-position="fixed">
+			<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 				  <li><a href="#home"  data-icon="home">Home</a></li>
@@ -889,9 +889,9 @@
 				<!-- =============================== 	Fluoride   ======================================= -->
 
 	
-	<section id="fluoride" data-role="page" data-theme="b">
+	<section id="fluoride" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Fluoride therapy</h4>
 			<a href="#recommendations" data-icon="back">Back</a>
 		</div>
@@ -906,13 +906,13 @@
 	
 						  <fieldset data-role="controlgroup">
 							<legend>Fluoride:</legend>
-							  <label for="fluoride_paste_otc_th">OTC fluoride-containing toothpaste twice daily, after breakfast and at bedtime.</label>
-							  <input type="checkbox" name="fluoride_paste_otc_th" id="fluoride_paste_otc_th" value="fluoride_paste_otc_th">
 							  <label for="fluoride_paste_5000_th">1.1% NaF toothpaste instead of regular fluoride toothpaste twice daily, after breakfast and at bedtime.</label>
 							  <input type="checkbox" name="fluoride_paste_5000_th" id="fluoride_paste_5000_th" value="fluoride_paste_5000_th">
-							  <label for="fluoride_mouthrinse_th">OTC 0.05% NaF rinse daily.</label>
-							  <input type="checkbox" name="fluoride_mouthrinse_th" id="fluoride_mouthrinse_th" value="fluoride_mouthrinse_th" >
-							  <label for="fluoride_mouthrinse_extra_th">0.2% NaF rinse daily (1 bottle) then OTC 0.05% NaF rinse 2X daily.</label>
+							  <label for="fluoride_mouthrinse_th_once">OTC 0.05% NaF rinse once daily.</label>
+							  <input type="checkbox" name="fluoride_mouthrinse_th_once" id="fluoride_mouthrinse_th_once" value="fluoride_mouthrinse_th_once" >
+							  <label for="fluoride_mouthrinse_th_twice">OTC 0.05% NaF rinse twice daily.</label>
+							  <input type="checkbox" name="fluoride_mouthrinse_th_twice" id="fluoride_mouthrinse_th_twice" value="fluoride_mouthrinse_th_twice" >
+							  <label for="fluoride_mouthrinse_extra_th">0.2% NaF rinse once daily.</label>
 							  <input type="checkbox" name="fluoride_mouthrinse_extra_th" id="fluoride_mouthrinse_extra_th" value="fluoride_mouthrinse_extra_th" >
 							  <label for="fluoride_mouthrinse_xerostomia_th">OTC 0.05% NaF rinse when mouth feels dry, after snacking, breakfast, and lunch.</label>
 							  <input type="checkbox" name="fluoride_mouthrinse_xerostomia_th" id="fluoride_mouthrinse_xerostomia_th" value="fluoride_mouthrinse_xerostomia_th">							  
@@ -928,7 +928,7 @@
 		</div>
 		
 		
-			<div data-role="footer" data-position="fixed">
+			<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 				  <li><a href="#home"  data-icon="home">Home</a></li>
@@ -1015,7 +1015,7 @@
 	
 						<fieldset data-role="controlgroup" >
 							<legend>Calcium-phosphate paste:</legend>
-							  <label for="cap_th">Apply calcium/ phosphate paste twice daily.</label>
+							  <label for="cap_th">Apply calcium phosphate paste twice daily.</label>
 							  <input type="checkbox" name="cap_th" id="cap_th" value="cap_th">
 						</fieldset>
 		
