specific th submit/view 2

--- a/www/index.html
+++ b/www/index.html
@@ -948,9 +948,9 @@
 				<!-- =============================== 	Ph-control   ======================================= -->
 
 	
-	<section id="ph_control" data-role="page" data-theme="b">
+	<section id="ph_control" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>Ph-control therapy</h4>
 			<a href="#recommendations" data-icon="back">Back</a>
 		</div>
@@ -981,7 +981,7 @@
 		</div>
 		
 		
-			<div data-role="footer" data-position="fixed">
+			<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 				  <li><a href="#home"  data-icon="home" >Home</a></li>
@@ -998,9 +998,9 @@
 				<!-- =============================== 	CaP paste   ======================================= -->
 
 	
-	<section id="cap_paste" data-role="page" data-theme="b">
+	<section id="cap_paste" data-role="page" data-theme="a">
 	
-		<div data-role="header"  data-position="fixed">
+		<div data-role="header"  data-position="fixed" data-theme="b">
 			<h4>CaP paste</h4>
 			<a href="#recommendations" data-icon="back">Back</a>
 		</div>
@@ -1029,7 +1029,7 @@
 		</div>
 		
 		
-			<div data-role="footer" data-position="fixed">
+			<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 				  <li><a href="#home"  data-icon="home" >Home</a></li>
