XDate & controller -update function

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
 			<script type="text/javascript" src="phonegap.js"></script>
 			<script type="text/javascript" src="js/jstorage.js"></script>
 			<script type="text/javascript" src="js/date.js"></script>
+			<script type="text/javascript" src="js/xdate.js"></script>
 			<script type="text/javascript" src="js/submitForm.js"></script>
 			<script type="text/javascript" src="js/test_objects.js"></script>
 			<script type="text/javascript" src="js/controller.js"></script>
