--- a/www/index.html
+++ b/www/index.html
@@ -1252,7 +1252,12 @@
 		
 		
 		<div data-role="content">
-				<canvas id="myChart" width="400" height="400"></canvas>
+			<h4>Last 10 days:</h4>
+			<div class="canvas-container">
+				<canvas id="myChart"></canvas>
+			</div>
+
+
 		</div>
 		
 		
