--- a/www/index.html
+++ b/www/index.html
@@ -1205,13 +1205,13 @@
 			
 				<li data-role="list-divider">General:</li>	
 					
-					<li id="snack_compliance"><a href="#" onclick="graph()"><h4>Snack:</h4>
+					<li id="snack_compliance"><a href="#" onclick="drawGraph('snack')"><h4>Snack:</h4>
 									<p>Compliance: <span class="redWhite">good(2,5 / day)</span></p>									
 					</a>
 					<a href="#" onclick="clearStatistic()"></a>
 					</li>	
 					
-					<li id="brushing_compliance"><a href="#graph"><h4>Brushing:</h4>
+					<li id="brushing_compliance"><a href="#" onclick="drawGraph('brushing')"><h4>Brushing:</h4>
 									<p>Compliance: <span class="greenWhite">good(2 / day)</span></p>
 					</a>
 					<a href="#" onclick="clearStatistic()"></a>
