adherence & graph design

--- a/www/index.html
+++ b/www/index.html
@@ -303,7 +303,7 @@
 			<ul data-role="listview" >
 				<li><a href="#current_status_info" data-theme="d">Current status</a></li>
 				<li><a href="#current_therapy_info" data-theme="d" >Current recomended therapy</a></li>
-				<li><a href="#compliance" data-theme="d" >Compliance</a></li>
+				<li><a href="#compliance" data-theme="d" >Adherence</a></li>
 			</ul>
 			
 			<br /><br />
@@ -1189,12 +1189,12 @@
 	</section>
 		
 	
-<!-- =============================== 	compliance  ======================================= -->
+<!-- =============================== 	Adherence  ======================================= -->
 
 	
 	<section id="compliance" data-role="page" data-theme="a">
 		<div data-role="header"  data-position="fixed" data-theme="b">
-			<h4>Compliance</h4>
+			<h4>Adherence</h4>
 			<a href="#profile" data-icon="back">Back</a>
 		</div>
 		
