--- a/www/index.html
+++ b/www/index.html
@@ -382,7 +382,11 @@
 		
 		<div data-role="content" data-theme="a">
 		<div id = "info_text_division"></div>		
-		<h4>RESOURCES</h4><p><a href='#' onclick="window.open('http://en.m.wikipedia.org/wiki/Dental_caries', '_system', 'location=no');">Wikipedia article about dental caries</a></p><p><a href='http://www.dentalhealth.org/tell-me-about/topic/mouth-conditions/dental-decay'>Dental health article about dental caries</a></p><p><a href='http://www.dentalhealth.org/tell-me-about/topic/gum-disease/gum-disease'>Dental health article about gum disease</a></p><p><a href='http://tinyurl.com/kuwvd2a'>mouthhealthy.org article about brushing and flossing</a></p>
+		<h4>RESOURCES</h4>
+		<p><a href='#' onclick="window.open('http://en.m.wikipedia.org/wiki/Dental_caries', '_system', 'location=no');">Wikipedia article about dental caries</a></p>
+		<p><a href='#' onclick="window.open('http://www.dentalhealth.org/tell-me-about/topic/mouth-conditions/dental-decay', '_system', 'location=no');">Dental health article about dental caries</a></p>
+		<p><a href='#' onclick="window.open('http://www.dentalhealth.org/tell-me-about/topic/gum-disease/gum-disease', '_system', 'location=no');">Dental health article about gum disease</a></p>
+		<p><a href='#' onclick="window.open('http://tinyurl.com/kuwvd2a', '_system', 'location=no');">mouthhealthy.org article about brushing and flossing</a></p>
 		</div>
 		
 		
