--- a/www/index.html
+++ b/www/index.html
@@ -384,9 +384,9 @@
 		<div id = "info_text_division"></div>		
 		<h4>RESOURCES</h4>
 		<p><a href='#' onclick="window.open('http://en.m.wikipedia.org/wiki/Dental_caries', '_system', 'location=no');">Wikipedia article about dental caries</a></p>
-		<p><a href='#' onclick="window.open('http://www.dentalhealth.org/tell-me-about/topic/mouth-conditions/dental-decay', '_system', 'location=no');">Dental health article about dental caries</a></p>
+		<p><a href='#' onclick="window.open('http://www.dentalhealth.org/tell-me-about/topic/mouth-conditions/dental-decay', '_blank', 'location=no');">Dental health article about dental caries</a></p>
 		<p><a href='#' onclick="window.open('http://www.dentalhealth.org/tell-me-about/topic/gum-disease/gum-disease', '_system', 'location=no');">Dental health article about gum disease</a></p>
-		<p><a href='#' onclick="window.open('http://tinyurl.com/kuwvd2a', '_system', 'location=no');">mouthhealthy.org article about brushing and flossing</a></p>
+		<p><a href='#' onclick="navigator.app.loadUrl('http://www.mouthhealthy.org/en/az-topics/b/brushing-your-teeth', { openExternal:true });"> mouthhealthy.org article about brushing and flossing</a></p>
 		</div>
 		
 		
