--- a/www/index.html
+++ b/www/index.html
@@ -198,8 +198,7 @@
 				<p id="timer">02:00</p>
 				<br />
 				<p>Press start button when ready to begin teeth brushing. The brushing should last at least 2 minutes, as timer indicates.</p>
-				<p id="tooth_paste">Use standard over-the-counter tooth paste (1100 - 1450 ppm F).</p>
-				<p >Refer to info section/resources to learn more about teeth brushing.</p>
+				<p id="tooth_paste">Use standard over-the-counter tooth paste or therapeutic paste if prescribed by your dentist.</p>
 
 			</div>
 			
@@ -228,8 +227,7 @@
 		
 			<div data-role="content">
 				<a href="#" data-role="button" id="flossing_registration_button" data-theme="a" onclick="registration('flossing')">Register</a>
-				<p>You should clean interdental spaces once daily before brushing. Use interdental brush prescribed by your dentist.</p>
-				<p >Refer to info section/resources to learn more about flossing.</p>
+				<p>You should clean interdental spaces once daily before brushing. Use floss or interdental brush prescribed by your dentist.</p>
 			</div>
 			
 		<div data-role="footer" data-position="fixed" data-theme="b">
@@ -302,7 +300,7 @@
 		
 			<ul data-role="listview" >
 				<li><a href="#current_status_info" class="wrap" data-theme="d">Current status</a></li>
-				<li><a href="#current_therapy_info" class="wrap"  >Current recomended therapy</a></li>
+				<li><a href="#current_therapy_info" class="wrap"  >Therapy list</a></li>
 				<li><a href="#compliance" class="wrap" >Adherence</a></li>
 			</ul>
 			
@@ -1091,10 +1089,9 @@
 					
 
 						<label for="textarea-a">Directions to the patient:</label>
-						<textarea name="directions" id="directions" value=""/>
-						</textarea>
+						<textarea name="directions" id="directions" value=""/></textarea>
 			
-						  <label for="take_as_needed">Take as needed:</label>
+						  <label for="take_as_needed">Take as needed or toothpaste:</label>
 						  <input type="checkbox" name="take_as_needed" id="take_as_needed" value="take_as_needed">
 						<label for="slider-step">Use times daily:</label>
 						<input type="range" name="times_daily" id="times_daily" value="1" min="1" max="10" step="1" />
